# porridge

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE.txt  Pipfile  README.md  build.sh  mhroat.fbp  mhroat.xrc  pyproject.toml  secret.7z
.github/workflows/: CI.yml  release.yml
resources/: mhroat.icns  mhroat.xrc
resources/pcehr_schema/: license.txt
src/: config-example.py  mhr.py  nehta_signature.py  porridge.py
tests/: noc_test_11.py  noc_test_13.py  send_requests.py  test_NOC.sh
