[project]
name = "porridge"
version = "1.1.0"
dependencies = [
    "requests[security]",
    "zeep[xmlsec]",
    "keyring",
    "pyopenssl",
    # https://github.com/wxWidgets/Phoenix/issues/2614
    "wxpython<4.2.2",
]
# wheels for 3.13 aren't available yet for wxpython or xmlsec
requires-python = ">=3.9, <3.13"

[tool.uv]
dev-dependencies = [
    "pyinstaller",
    # https://github.com/xmlsec/python-xmlsec/issues/345
    "xmlsec<1.3.15",
]
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]
